<resources>
    <string name="app_name">小红本</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="once_click_quit">再按一次退出程序</string>
    <!-- 添加红包 -->
    <string name="name">姓名</string>
    <string name="sex">属于</string>
    <string name="men">男方</string>
    <string name="women">女方</string>
    <string name="all">共同</string>
    <string name="time">时间</string>
    <string name="type">类型</string>
    <string name="income">收入</string>
    <string name="spending">支出</string>
    <string name="money">金额</string>
    <string name="gift">随礼</string>
    <string name="remark">备注</string>
    <string name="categoryName">关系类别</string>
    <string name="commit">提交</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="add_type">添加组别</string>
    <string name="delete">删除</string>
    <string name="modify">修改</string>

    <string name="action_all">全部</string>
    <string name="action_in">收入</string>
    <string name="action_out">支出</string>
    <string name="error">轻触屏幕重新加载</string>
    <string name="no_data">暂无数据</string>
    <string name="error_quit">很抱歉，程序出现错误，即将退出…</string>
    <string name="new_version_download">新版本下载</string>
    <string name="loading">正在加载中…</string>
    <string name="load_fail_retry">加载失败，点击重新加载</string>
    <string name="title_feedback">反馈</string>
    <string name="hint_input_feedback">请输入您的反馈意见</string>
    <string name="hint_input_contact">请留下您的联系方式(如QQ),方便我联系您!</string>
    <string name="hint_upload_log">上传程序错误日志,帮助我们改进吧。</string>
    <string name="send">发送</string>
    <string name="thanks_to_feedback">提交成功,感谢您的建议!</string>
    <string name="title_about">关于</string>
    <string name="title_exit">退出</string>
    <string name="setting">系统</string>
    <string name="check_update">检测更新</string>
    <string name="new_version">最新版本</string>
    <string name="share_soft">分享软件</string>
    <string name="more_share">更多分享</string>
    <string name="not_find_share_soft">没有找到分享软件</string>
    <string name="v">V%s</string>
    <string name="no_new_version">当前已是最新版本</string>
    <string name="alert">提示</string>
    <string name="update">更新</string>
    <string name="share_tip">红包不只是钱的问题，这是一场包含人情世故的游戏，请记录下游戏里的每一个人！快来下载吧！http://helengray.github.io/</string>
    <string name="force_to_update">该版本需要更新后才能使用</string>
    <string name="title_group">组别</string>
    <string name="hint_add_group">添加组别</string>
    <string name="save">保存</string>
    <string name="tag_exist">标签已存在</string>
    <string name="tag_not_empty">标签不能为空</string>
    <string name="add_fail">添加失败</string>
    <string name="add_success">添加成功</string>
    <string name="delete_fail">删除失败</string>
    <string name="delete_success">删除成功</string>
    <string name="update_fail">修改失败</string>
    <string name="update_success">修改成功</string>
    <string name="default_tag_not_update">\'默认\'组别不能修改</string>
    <string name="default_tag_not_delete">\'默认\'组别不能删除</string>
    <string name="default_tag">默认</string>
    <string name="tag_count_limit">标签最多%d个</string>
    <string name="tag_delete_tip">删除分组后，原组别数据还保留着，确定要删除吗？</string>
    <string name="tag_update_tip">组别变更后，原组别数据还保留着，确定要修改吗？</string>
    <string name="confirm_to_exit">确定要退出吗？</string>
    <string name="group_update_tip">长按标签可进行修改</string>
    <string name="request_fail">请求失败</string>
    <string name="cancel_auth">取消授权</string>
    <string name="auth_fail">授权失败</string>
    <string name="login_success">登录成功</string>
    <string name="requesting">请求中…</string>
    <string name="get_code">获取验证码</string>
    <string name="register">注册</string>
    <string name="action_search">搜索</string>
    <string name="search_hint">请输入名字</string>
</resources>
